--- a/tomcat/webapps/erasmus/css/ui.css
+++ b/tomcat/webapps/erasmus/css/ui.css
@@ -143,5 +143,66 @@ a {
 }
 
 
+/* ça commence là*/
 
+tr:nth-child(even){
+    background-color: rgb(206,206,206);
+}
 
+#contact{
+    font-size: 18px;
+    color: rgb(131, 166, 151);
+}
+
+textarea{
+    resize: none;
+}
+
+th{
+    color: rgb(131, 166, 151);
+}
+
+#identite {
+    padding-bottom: 170px;
+    width: 250px;
+    height: 220px;
+    color: white;
+    background-color: rgb(131, 166, 151);
+}
+
+#identite > .row{
+    background-color: rgb(131, 166, 151);
+}
+
+#formation {
+    width: 250px;
+    height: 500 px;
+    background-color: rgb(134,210,182);
+}
+#formation > .row{
+    background-color: rgb(134,210,182);
+    height: 480px;
+}
+
+#text{
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align:left;
+    font-size: 16px;
+}
+
+strong{
+    color: rgb(131, 166, 151);
+}
+
+#titreAcceuil{
+    font-size: 70px;
+}
+
+#textAcceuil{
+    font-size: 20px;
+}
+
+#titre{
+    font-size: 22px;
+}
