index et css commenté

--- a/tomcat/webapps/erasmus/css/ui.css
+++ b/tomcat/webapps/erasmus/css/ui.css
@@ -141,11 +141,11 @@ a {
     width: 65px;
 }
 
+/* couleur du texte*/
 strong{
     color: rgb(131, 166, 151);
 }
-
-
+/*mettr en gros les titres*/
 #titre{
     font-size: 22px;
 }
