--- a/tomcat/webapps/erasmus/css/cities.css
+++ b/tomcat/webapps/erasmus/css/cities.css
@@ -1,33 +1,3 @@
-	.filter-sections div {
-		opacity: 0;
-		display: none;
-		min-height: 50px;
-		margin: 0.5em;
-		text-align: center;
-		padding: 2em 1em;
-		float: left;
-	}
-
-	.view {
-		display: block !important;
-		opacity: 1 !important;
-		transform: scale(1) rotate(0deg);
-		border-radius:4px;
-		animation: selected 300ms 1 ease-in-out;
-	}
-
-
-	/* baner*/
-	body{
-		margin: 0px;
-		padding: 0px;
-		border: 0;
-		color : red;
-		background-color: white;
-		width:auto;
-		font-size: 100%;
-		font: inherit;
-	}
 
 	.navbar ul {
 		list-style: none;
@@ -105,15 +75,27 @@
 		display: block;
 	}
 
-	#myInput {
-		background-position: 10px 12px;
-		width: 29%;
-		font-size: 16px;
-		padding: 12px 20px 12px 45px;
-		border: 1px solid #ddd;
-		border-bottom: 10px;
+	input[type=text] {
+    width: 20%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
 	}
 
+	input[type=text]:focus {
+    width: 35%;
+	}
+
+
+	/* list right*/
 	#filter-links {
 		list-style-type: none;
 		padding: 0px;
@@ -122,7 +104,7 @@
 
 	#filter-links li a {
 		border: 1px solid #ddd;
-		width: 32%;
+		width: 35%;
 		margin-top: -1px; /* Prevent double borders */
 		background-color: #f0f0f0;
 		padding: 12px;
@@ -137,10 +119,29 @@
 		cursor: default;
 	}
 
+	/*description of city*/
 	.filter-sections {
 		float : right;
-		color : blue;
+		color : teal;
 		margin-left: 35%;
 		position : absolute;
 		top : 50px;
+	}
+
+	.filter-sections div {
+		opacity: 0;
+		display: none;
+		min-height: 50px;
+		margin: 0.5em;
+		text-align: center;
+		padding: 2em 1em;
+		float: left;
+	}
+
+	.view {
+		display: block !important;
+		opacity: 1 !important;
+		transform: scale(1) rotate(0deg);
+		border-radius:4px;
+		animation: selected 300ms 1 ease-in-out;
 	}
