--- a/tomcat/webapps/erasmus/css/cities.css
+++ b/tomcat/webapps/erasmus/css/cities.css
@@ -126,6 +126,8 @@
 		margin-left: 35%;
 		position : absolute;
 		top : 50px;
+		background:#D652D9;
+    	padding:12px;
 	}
 
 	.filter-sections div {
@@ -135,7 +137,11 @@
 		margin: 0.5em;
 		text-align: center;
 		padding: 2em 1em;
-		float: left;
+		float: left; 		
+	}
+	p.toto {
+    border-style: solid;
+    border-width: medium;
 	}
 
 	.view {
